fix code contrast ratio

--- a/src/_includes/css/post.css
+++ b/src/_includes/css/post.css
@@ -131,14 +131,9 @@ main h2 {
 
 /* components/ code snippet */
 main p > code {
-  background: hsl(340, 90%, 55%);
-  background: var(--primary-6);
-  color: hsl(215, 10%, 97%);
-  color: var(--grey-10);
-  border-radius: 0.2rem;
-  padding: 0 0.25rem;
-  display: inline-block;
-  line-height: 1.5;
+  background: hsl(330, 100%, 92%);
+  background: var(--primary-10);
+  padding: 0.2rem 0.25rem;
 }
 
 main .code {
